small fix features section mobile

--- a/src/assets/sass/global/mobile.scss
+++ b/src/assets/sass/global/mobile.scss
@@ -95,7 +95,7 @@
         display: block;
         background-image: url('/img/video-mob.png');
         background-repeat: no-repeat;
-        background-position: center;
+        background-position: center left;
         background-size: cover;
         width: 400px;
         height: 215px;
